// This is your Prisma schema file for JOOAV ERP System
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
   provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

// ================================
// CORE MODELS
// ================================

model User {
  id        String   @id @default(cuid())
  email     String   @unique
  username  String?  @unique
  password  String
  firstName String?
  lastName  String?
  phone     String?
  avatar    String?
  role      UserRole @default(SME_USER)
  status    UserStatus @default(ACTIVE)
  emailVerified Boolean @default(false)
  lastLogin     DateTime?
  passwordChangedAt DateTime?
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  profile   UserProfile?
  sessions  UserSession[]
  activities UserActivity[]
  createdOrders Order[] @relation("CreatedBy")
  assignedTasks Task[] @relation("AssignedTo")
  
  // JooavERP specific relations
  superAdminProfile SuperAdminProfile?
  smeProfile        SMEUser?
  subAdminProfile   SubAdminProfile?
  
  @@map("users")
}

model UserProfile {
  id          String    @id @default(cuid())
  userId      String    @unique
  dateOfBirth DateTime?
  address     String?
  city        String?
  state       String?
  country     String?
  zipCode     String?
  bio         String?
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  @@map("user_profiles")
}

model UserSession {
  id        String   @id @default(cuid())
  userId    String
  token     String   @unique
  expiresAt DateTime
  ipAddress String?
  userAgent String?
  
  // Timestamps
  createdAt DateTime @default(now())
  
  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  @@map("user_sessions")
}

model UserActivity {
  id          String   @id @default(cuid())
  userId      String
  action      String
  resource    String?
  resourceId  String?
  metadata    Json?
  ipAddress   String?
  userAgent   String?
  
  // Timestamps
  createdAt DateTime @default(now())
  
  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  @@map("user_activities")
}

// ================================
// BUSINESS MODELS
// ================================

model Customer {
  id          String        @id @default(cuid())
  companyName String?
  contactName String
  email       String        @unique
  phone       String?
  address     String?
  city        String?
  state       String?
  country     String?
  zipCode     String?
  status      CustomerStatus @default(ACTIVE)
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  orders Order[]
  
  @@map("customers")
}

model Product {
  id          String      @id @default(cuid())
  name        String
  description String?
  sku         String      @unique
  barcode     String?     @unique
  category    String
  price       Decimal     @db.Decimal(10, 2)
  costPrice   Decimal?    @db.Decimal(10, 2)
  stock       Int         @default(0)
  minStock    Int         @default(0)
  maxStock    Int?
  status      ProductStatus @default(ACTIVE)
  images      String[]
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  orderItems OrderItem[]
  stockMovements StockMovement[]
  
  @@map("products")
}

model Order {
  id              String      @id @default(cuid())
  orderNumber     String      @unique
  customerId      String?     // Made optional for SME orders
  smeUserId       String?     // SME who placed the order
  manufacturerId  String?     // Manufacturer fulfilling the order
  assignedSubAdminId String?  // Sub-admin handling procurement
  createdById     String
  status          OrderStatus @default(PLACED)
  paymentStatus   PaymentStatus @default(PENDING)
  paymentMethod   PaymentMethod?
  subtotal        Decimal     @db.Decimal(10, 2)
  taxAmount       Decimal     @db.Decimal(10, 2) @default(0)
  discountAmount  Decimal     @db.Decimal(10, 2) @default(0)
  totalAmount     Decimal     @db.Decimal(10, 2)
  notes           String?
  
  // JooavERP specific fields
  procurementNotes String?    // Internal procurement notes
  deliveryAddress  String?    // SME delivery address
  estimatedDelivery DateTime? // Estimated delivery date
  trackingNumber   String?    // Logistics tracking
  
  // Dates
  orderDate       DateTime    @default(now())
  requiredDate    DateTime?
  acceptedDate    DateTime?   // When manufacturer accepted
  processingDate  DateTime?   // When processing started
  shippedDate     DateTime?
  deliveredDate   DateTime?
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  customer    Customer? @relation(fields: [customerId], references: [id])
  smeUser     SMEUser? @relation(fields: [smeUserId], references: [id])
  manufacturer Manufacturer? @relation(fields: [manufacturerId], references: [id])
  assignedSubAdmin SubAdminProfile? @relation("AssignedSubAdmin", fields: [assignedSubAdminId], references: [id])
  createdBy   User @relation("CreatedBy", fields: [createdById], references: [id])
  items       OrderItem[]
  payments    Payment[]
  inventoryMovements InventoryMovement[]
  
  @@map("orders")
}

model OrderItem {
  id        String  @id @default(cuid())
  orderId   String
  productId String
  quantity  Int
  unitPrice Decimal @db.Decimal(10, 2)
  totalPrice Decimal @db.Decimal(10, 2)
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  order   Order @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id])
  
  @@unique([orderId, productId])
  @@map("order_items")
}

model Payment {
  id              String        @id @default(cuid())
  orderId         String
  paymentMethod   PaymentMethod
  status          PaymentStatus @default(PENDING)
  amount          Decimal       @db.Decimal(10, 2)
  transactionId   String?       @unique
  reference       String?
  notes           String?
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  order Order @relation(fields: [orderId], references: [id])
  
  @@map("payments")
}

model StockMovement {
  id          String            @id @default(cuid())
  productId   String
  type        StockMovementType
  quantity    Int
  reason      String?
  reference   String?
  
  // Timestamps
  createdAt DateTime @default(now())
  
  // Relations
  product Product @relation(fields: [productId], references: [id])
  
  @@map("stock_movements")
}

// ================================
// PROJECT MANAGEMENT MODELS
// ================================

model Project {
  id          String        @id @default(cuid())
  name        String
  description String?
  status      ProjectStatus @default(ACTIVE)
  priority    Priority      @default(MEDIUM)
  startDate   DateTime?
  endDate     DateTime?
  budget      Decimal?      @db.Decimal(12, 2)
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  tasks Task[]
  
  @@map("projects")
}

model Task {
  id          String     @id @default(cuid())
  projectId   String?
  assignedId  String?
  title       String
  description String?
  status      TaskStatus @default(TODO)
  priority    Priority   @default(MEDIUM)
  dueDate     DateTime?
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  project   Project? @relation(fields: [projectId], references: [id])
  assignedTo User? @relation("AssignedTo", fields: [assignedId], references: [id])
  
  @@map("tasks")
}

// ================================
// SYSTEM MODELS
// ================================

model SystemConfig {
  id    String @id @default(cuid())
  key   String @unique
  value Json
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  @@map("system_configs")
}

model AuditLog {
  id         String   @id @default(cuid())
  userId     String?
  action     String
  resource   String
  resourceId String?
  oldData    Json?
  newData    Json?
  ipAddress  String?
  userAgent  String?
  
  // Timestamps
  createdAt DateTime @default(now())
  
  @@map("audit_logs")
}

// ================================
// JOOAV ERP PLATFORM MODELS
// ================================

model SuperAdminProfile {
  id                String    @id @default(cuid())
  userId            String    @unique
  permissions       Json?     // Granular permissions for platform operations
  assignedRegions   String[]  // Optional regions this admin manages
  lastActivity      DateTime?
  loginAttempts     Int       @default(0)
  accountLockUntil  DateTime?
  
  // Platform management settings
  canManageManufacturers Boolean @default(true)
  canApproveSMEs         Boolean @default(true)
  canManageSubAdmins     Boolean @default(true)
  canAccessAnalytics     Boolean @default(true)
  canModifySystemConfig  Boolean @default(false)
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  @@map("super_admin_profiles")
}

model Region {
  id          String @id @default(cuid())
  name        String @unique
  code        String @unique // e.g., "NG-LA" for Lagos, Nigeria
  country     String
  state       String?
  isActive    Boolean @default(true)
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  manufacturers Manufacturer[]
  smeUsers      SMEUser[]
  subAdmins     SubAdminProfile[]
  
  @@map("regions")
}

model Manufacturer {
  id              String            @id @default(cuid())
  companyName     String
  contactEmail    String            @unique
  contactPhone    String?
  address         String?
  regionId        String
  status          ManufacturerStatus @default(PENDING_APPROVAL)
  
  // Business details
  businessLicense String?
  taxId          String?
  products       Json[]           // Product catalog
  
  // Partnership details
  partnershipDate DateTime?
  contractUrl     String?
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  region Region @relation(fields: [regionId], references: [id])
  orders Order[]
  
  @@map("manufacturers")
}

model SMEUser {
  id           String     @id @default(cuid())
  userId       String     @unique
  businessName String
  businessType String     // e.g., "Retail", "Wholesale", "Distribution"
  regionId     String
  
  // Business verification
  businessLicense String?
  verificationStatus SMEVerificationStatus @default(PENDING)
  approvedBy     String?   // Admin who approved
  approvedAt     DateTime?
  
  // Business metrics
  totalOrders    Int @default(0)
  totalSpent     Decimal @default(0) @db.Decimal(15, 2)
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  region Region @relation(fields: [regionId], references: [id])
  orders Order[]
  inventory Inventory[]
  
  @@map("sme_users")
}

model SubAdminProfile {
  id                String @id @default(cuid())
  userId            String @unique
  regionId          String? // Optional - can be assigned by region or order-based
  employeeId        String @unique
  
  // Procurement officer details
  specializations   String[] // e.g., ["Electronics", "Food & Beverages"]
  maxOrderValue     Decimal? @db.Decimal(15, 2)
  
  // Performance metrics
  ordersProcessed   Int @default(0)
  averageProcessingTime Int? // in hours
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  user     User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  region   Region? @relation(fields: [regionId], references: [id])
  assignedOrders Order[] @relation("AssignedSubAdmin")
  
  @@map("sub_admin_profiles")
}

model Inventory {
  id              String         @id @default(cuid())
  smeUserId       String
  productName     String
  productSku      String
  currentStock    Int            @default(0)
  minStock        Int            @default(0)
  maxStock        Int?
  status          InventoryStatus @default(IN_STOCK)
  
  // Auto-calculated fields
  lastOrderDate   DateTime?
  lastDeliveryDate DateTime?
  predictedRunOut DateTime?
  consumptionRate Decimal?       @db.Decimal(8, 2) // units per day
  
  // Timestamps
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  
  // Relations
  smeUser SMEUser @relation(fields: [smeUserId], references: [id], onDelete: Cascade)
  movements InventoryMovement[]
  
  @@unique([smeUserId, productSku])
  @@map("inventory")
}

model InventoryMovement {
  id           String              @id @default(cuid())
  inventoryId  String
  type         InventoryMovementType
  quantity     Int
  reason       String?             // e.g., "Delivery", "Sale", "Adjustment"
  orderId      String?
  
  // Timestamps
  createdAt DateTime @default(now())
  
  // Relations
  inventory Inventory @relation(fields: [inventoryId], references: [id], onDelete: Cascade)
  order     Order?    @relation(fields: [orderId], references: [id])
  
  @@map("inventory_movements")
}

model AdminAuditLog {
  id          String          @id @default(cuid())
  adminId     String
  action      AdminAction
  resource    ResourceType
  resourceId  String?
  regionId    String?
  
  // Audit details
  oldData     Json?
  newData     Json?
  metadata    Json?
  ipAddress   String?
  userAgent   String?
  
  // Timestamps
  createdAt DateTime @default(now())
  
  @@map("admin_audit_logs")
}

// ================================
// ENUMS
// ================================

enum UserRole {
  SUPER_ADMIN    // Platform owner (Jooav management) - highest level
  ADMIN          // Regional/operational admin
  SUB_ADMIN      // Procurement officers (can be regional or order-based)
  SME_USER       // Small business owners
}

enum UserStatus {
  ACTIVE
  SUSPENDED
  PENDING_APPROVAL
  DEACTIVATED
  BLOCKED
}

enum CustomerStatus {
  ACTIVE
  INACTIVE
  SUSPENDED
}

enum ProductStatus {
  ACTIVE
  INACTIVE
  DISCONTINUED
}

enum OrderStatus {
  PLACED           // SME placed the order
  ACCEPTED         // Manufacturer accepted the order
  PROCESSING       // Order being processed/sourced
  IN_TRANSIT       // Order shipped and in transit
  DELIVERED        // Order delivered to SME
  CANCELLED        // Order cancelled
  REJECTED         // Manufacturer rejected the order
}

enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  CANCELLED
  REFUNDED
}

enum PaymentMethod {
  CREDIT_CARD
  DEBIT_CARD
  BANK_TRANSFER
  CASH
  DIGITAL_WALLET
}

enum StockMovementType {
  IN
  OUT
  ADJUSTMENT
}

enum ProjectStatus {
  ACTIVE
  COMPLETED
  CANCELLED
  ON_HOLD
}

enum TaskStatus {
  TODO
  IN_PROGRESS
  REVIEW
  COMPLETED
  CANCELLED
}

enum Priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

// JooavERP specific enums
enum ManufacturerStatus {
  PENDING_APPROVAL
  ACTIVE
  SUSPENDED
  TERMINATED
}

enum SMEVerificationStatus {
  PENDING
  VERIFIED
  REJECTED
  REQUIRES_ADDITIONAL_INFO
}

enum InventoryStatus {
  IN_STOCK
  LOW_STOCK
  OUT_OF_STOCK
  DISCONTINUED
}

enum InventoryMovementType {
  INBOUND      // Stock received
  OUTBOUND     // Stock sold/used
  ADJUSTMENT   // Manual adjustment
  DAMAGED      // Damaged goods
  EXPIRED      // Expired products
}

enum AdminAction {
  // Authentication actions
  LOGIN_SUCCESS
  LOGIN_FAILED
  LOGOUT
  TOKEN_REFRESH
  TOKEN_REFRESH_FAILED
  
  // Administrative actions
  CREATE_MANUFACTURER
  APPROVE_MANUFACTURER
  SUSPEND_MANUFACTURER
  APPROVE_SME
  REJECT_SME
  ASSIGN_SUB_ADMIN
  UPDATE_ORDER_STATUS
  MANAGE_INVENTORY
  SYSTEM_CONFIG
  USER_MANAGEMENT
}

enum ResourceType {
  MANUFACTURER
  SME_USER
  SUB_ADMIN
  ORDER
  INVENTORY
  REGION
  SYSTEM_CONFIG
  ADMIN_AUTH
}
