//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  username String [unique]
  password String [not null]
  firstName String
  lastName String
  phone String
  avatar String
  role UserRole [not null, default: 'SME_USER']
  status UserStatus [not null, default: 'ACTIVE']
  emailVerified Boolean [not null, default: false]
  lastLogin DateTime
  passwordChangedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  profile user_profiles
  sessions user_sessions [not null]
  activities user_activities [not null]
  createdOrders orders [not null]
  assignedTasks tasks [not null]
  superAdminProfile super_admin_profiles
  smeProfile sme_users
  subAdminProfile sub_admin_profiles
}

Table user_profiles {
  id String [pk]
  userId String [unique, not null]
  dateOfBirth DateTime
  address String
  city String
  state String
  country String
  zipCode String
  bio String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
}

Table user_sessions {
  id String [pk]
  userId String [not null]
  token String [unique, not null]
  expiresAt DateTime [not null]
  ipAddress String
  userAgent String
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
}

Table user_activities {
  id String [pk]
  userId String [not null]
  action String [not null]
  resource String
  resourceId String
  metadata Json
  ipAddress String
  userAgent String
  createdAt DateTime [default: `now()`, not null]
  user users [not null]
}

Table customers {
  id String [pk]
  companyName String
  contactName String [not null]
  email String [unique, not null]
  phone String
  address String
  city String
  state String
  country String
  zipCode String
  status CustomerStatus [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orders orders [not null]
}

Table products {
  id String [pk]
  name String [not null]
  description String
  sku String [unique, not null]
  barcode String [unique]
  category String [not null]
  price Decimal [not null]
  costPrice Decimal
  stock Int [not null, default: 0]
  minStock Int [not null, default: 0]
  maxStock Int
  status ProductStatus [not null, default: 'ACTIVE']
  images String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderItems order_items [not null]
  stockMovements stock_movements [not null]
}

Table orders {
  id String [pk]
  orderNumber String [unique, not null]
  customerId String
  smeUserId String
  manufacturerId String
  assignedSubAdminId String
  createdById String [not null]
  status OrderStatus [not null, default: 'PLACED']
  paymentStatus PaymentStatus [not null, default: 'PENDING']
  paymentMethod PaymentMethod
  subtotal Decimal [not null]
  taxAmount Decimal [not null, default: 0]
  discountAmount Decimal [not null, default: 0]
  totalAmount Decimal [not null]
  notes String
  procurementNotes String
  deliveryAddress String
  estimatedDelivery DateTime
  trackingNumber String
  orderDate DateTime [default: `now()`, not null]
  requiredDate DateTime
  acceptedDate DateTime
  processingDate DateTime
  shippedDate DateTime
  deliveredDate DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  customer customers
  smeUser sme_users
  manufacturer manufacturers
  assignedSubAdmin sub_admin_profiles
  createdBy users [not null]
  items order_items [not null]
  payments payments [not null]
  inventoryMovements inventory_movements [not null]
}

Table order_items {
  id String [pk]
  orderId String [not null]
  productId String [not null]
  quantity Int [not null]
  unitPrice Decimal [not null]
  totalPrice Decimal [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order orders [not null]
  product products [not null]

  indexes {
    (orderId, productId) [unique]
  }
}

Table payments {
  id String [pk]
  orderId String [not null]
  paymentMethod PaymentMethod [not null]
  status PaymentStatus [not null, default: 'PENDING']
  amount Decimal [not null]
  transactionId String [unique]
  reference String
  notes String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order orders [not null]
}

Table stock_movements {
  id String [pk]
  productId String [not null]
  type StockMovementType [not null]
  quantity Int [not null]
  reason String
  reference String
  createdAt DateTime [default: `now()`, not null]
  product products [not null]
}

Table projects {
  id String [pk]
  name String [not null]
  description String
  status ProjectStatus [not null, default: 'ACTIVE']
  priority Priority [not null, default: 'MEDIUM']
  startDate DateTime
  endDate DateTime
  budget Decimal
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tasks tasks [not null]
}

Table tasks {
  id String [pk]
  projectId String
  assignedId String
  title String [not null]
  description String
  status TaskStatus [not null, default: 'TODO']
  priority Priority [not null, default: 'MEDIUM']
  dueDate DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  project projects
  assignedTo users
}

Table system_configs {
  id String [pk]
  key String [unique, not null]
  value Json [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table audit_logs {
  id String [pk]
  userId String
  action String [not null]
  resource String [not null]
  resourceId String
  oldData Json
  newData Json
  ipAddress String
  userAgent String
  createdAt DateTime [default: `now()`, not null]
}

Table super_admin_profiles {
  id String [pk]
  userId String [unique, not null]
  permissions Json
  assignedRegions String[] [not null]
  lastActivity DateTime
  loginAttempts Int [not null, default: 0]
  accountLockUntil DateTime
  canManageManufacturers Boolean [not null, default: true]
  canApproveSMEs Boolean [not null, default: true]
  canManageSubAdmins Boolean [not null, default: true]
  canAccessAnalytics Boolean [not null, default: true]
  canModifySystemConfig Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
}

Table regions {
  id String [pk]
  name String [unique, not null]
  code String [unique, not null]
  country String [not null]
  state String
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  manufacturers manufacturers [not null]
  smeUsers sme_users [not null]
  subAdmins sub_admin_profiles [not null]
}

Table manufacturers {
  id String [pk]
  companyName String [not null]
  contactEmail String [unique, not null]
  contactPhone String
  address String
  regionId String [not null]
  status ManufacturerStatus [not null, default: 'PENDING_APPROVAL']
  businessLicense String
  taxId String
  products Json[] [not null]
  partnershipDate DateTime
  contractUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  region regions [not null]
  orders orders [not null]
}

Table sme_users {
  id String [pk]
  userId String [unique, not null]
  businessName String [not null]
  businessType String [not null]
  regionId String [not null]
  businessLicense String
  verificationStatus SMEVerificationStatus [not null, default: 'PENDING']
  approvedBy String
  approvedAt DateTime
  totalOrders Int [not null, default: 0]
  totalSpent Decimal [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  region regions [not null]
  orders orders [not null]
  inventory inventory [not null]
}

Table sub_admin_profiles {
  id String [pk]
  userId String [unique, not null]
  regionId String
  employeeId String [unique, not null]
  specializations String[] [not null]
  maxOrderValue Decimal
  ordersProcessed Int [not null, default: 0]
  averageProcessingTime Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  region regions
  assignedOrders orders [not null]
}

Table inventory {
  id String [pk]
  smeUserId String [not null]
  productName String [not null]
  productSku String [not null]
  currentStock Int [not null, default: 0]
  minStock Int [not null, default: 0]
  maxStock Int
  status InventoryStatus [not null, default: 'IN_STOCK']
  lastOrderDate DateTime
  lastDeliveryDate DateTime
  predictedRunOut DateTime
  consumptionRate Decimal
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  smeUser sme_users [not null]
  movements inventory_movements [not null]

  indexes {
    (smeUserId, productSku) [unique]
  }
}

Table inventory_movements {
  id String [pk]
  inventoryId String [not null]
  type InventoryMovementType [not null]
  quantity Int [not null]
  reason String
  orderId String
  createdAt DateTime [default: `now()`, not null]
  inventory inventory [not null]
  order orders
}

Table admin_audit_logs {
  id String [pk]
  adminId String [not null]
  action AdminAction [not null]
  resource ResourceType [not null]
  resourceId String
  regionId String
  oldData Json
  newData Json
  metadata Json
  ipAddress String
  userAgent String
  createdAt DateTime [default: `now()`, not null]
}

Enum UserRole {
  SUPER_ADMIN
  ADMIN
  SUB_ADMIN
  SME_USER
}

Enum UserStatus {
  ACTIVE
  SUSPENDED
  PENDING_APPROVAL
  DEACTIVATED
  BLOCKED
}

Enum CustomerStatus {
  ACTIVE
  INACTIVE
  SUSPENDED
}

Enum ProductStatus {
  ACTIVE
  INACTIVE
  DISCONTINUED
}

Enum OrderStatus {
  PLACED
  ACCEPTED
  PROCESSING
  IN_TRANSIT
  DELIVERED
  CANCELLED
  REJECTED
}

Enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  CANCELLED
  REFUNDED
}

Enum PaymentMethod {
  CREDIT_CARD
  DEBIT_CARD
  BANK_TRANSFER
  CASH
  DIGITAL_WALLET
}

Enum StockMovementType {
  IN
  OUT
  ADJUSTMENT
}

Enum ProjectStatus {
  ACTIVE
  COMPLETED
  CANCELLED
  ON_HOLD
}

Enum TaskStatus {
  TODO
  IN_PROGRESS
  REVIEW
  COMPLETED
  CANCELLED
}

Enum Priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

Enum ManufacturerStatus {
  PENDING_APPROVAL
  ACTIVE
  SUSPENDED
  TERMINATED
}

Enum SMEVerificationStatus {
  PENDING
  VERIFIED
  REJECTED
  REQUIRES_ADDITIONAL_INFO
}

Enum InventoryStatus {
  IN_STOCK
  LOW_STOCK
  OUT_OF_STOCK
  DISCONTINUED
}

Enum InventoryMovementType {
  INBOUND
  OUTBOUND
  ADJUSTMENT
  DAMAGED
  EXPIRED
}

Enum AdminAction {
  LOGIN_SUCCESS
  LOGIN_FAILED
  LOGOUT
  TOKEN_REFRESH
  TOKEN_REFRESH_FAILED
  CREATE_MANUFACTURER
  APPROVE_MANUFACTURER
  SUSPEND_MANUFACTURER
  APPROVE_SME
  REJECT_SME
  ASSIGN_SUB_ADMIN
  UPDATE_ORDER_STATUS
  MANAGE_INVENTORY
  SYSTEM_CONFIG
  USER_MANAGEMENT
}

Enum ResourceType {
  MANUFACTURER
  SME_USER
  SUB_ADMIN
  ORDER
  INVENTORY
  REGION
  SYSTEM_CONFIG
  ADMIN_AUTH
}

Ref: user_profiles.userId - users.id [delete: Cascade]

Ref: user_sessions.userId > users.id [delete: Cascade]

Ref: user_activities.userId > users.id [delete: Cascade]

Ref: orders.customerId > customers.id

Ref: orders.smeUserId > sme_users.id

Ref: orders.manufacturerId > manufacturers.id

Ref: orders.assignedSubAdminId > sub_admin_profiles.id

Ref: orders.createdById > users.id

Ref: order_items.orderId > orders.id [delete: Cascade]

Ref: order_items.productId > products.id

Ref: payments.orderId > orders.id

Ref: stock_movements.productId > products.id

Ref: tasks.projectId > projects.id

Ref: tasks.assignedId > users.id

Ref: super_admin_profiles.userId - users.id [delete: Cascade]

Ref: manufacturers.regionId > regions.id

Ref: sme_users.userId - users.id [delete: Cascade]

Ref: sme_users.regionId > regions.id

Ref: sub_admin_profiles.userId - users.id [delete: Cascade]

Ref: sub_admin_profiles.regionId > regions.id

Ref: inventory.smeUserId > sme_users.id [delete: Cascade]

Ref: inventory_movements.inventoryId > inventory.id [delete: Cascade]

Ref: inventory_movements.orderId > orders.id